# fstests

tests/: Makefile.am  configure.ac  test-freetype-cached.c  test-freetype.c
